--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
       
       <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
       <link href="/bootstrap/plugin/tabulator.min.css" rel="stylesheet">
-      <link href="bootstrapValidator.min.css" rel="stylesheet">
+
       <!-- 注意： 如果通过 file://  引入 Respond.js 文件，则该文件无法起效果 -->
       <!--[if lt IE 9]>
          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -39,7 +39,7 @@
                             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Servers<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/infra/listserver">ServerList</a></li>
-                                    <li><a href="/infra/getservers">AddServer</a></li>
+                                    <li><a href="/infra/getservers?page=1&size=5">AddServer</a></li>
                                 </ul>
 
                             </li>
@@ -87,7 +87,7 @@
       <script src="/bootstrap/js/bootstrap.min.js"></script>
       <script src="/bootstrap/plugin/jquery-ui.min.js"></script>
       <script src="/bootstrap/plugin/tabulator.min.js"></script>
-      <script src="bootstrapValidator.js"></script>
+
       <!--
       <script src="/bootstrap/customize/customize.js"></script>
       -->
