--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,6 +40,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="/infra/listserver">ServerList</a></li>
                                     <li><a href="/infra/getservers?page=1&size=5">AddServer</a></li>
+                                    <li><a href="/infra/ping">Ping</a></li>
                                 </ul>
 
                             </li>
