--- a/templates/layout.html
+++ b/templates/layout.html
@@ -63,14 +63,14 @@
      
             <div class="row">
             <!-- left bar -->
-                <div class="col-lg-3 col-md-3 col-sm-3 hidden-xs" style="display: none;" >
+                <div class="col-lg-1 col-md-1 col-sm-1 hidden-xs"  ><!--style="display: none;"-->
                     <p>
                         Left Bar
                     </p>
                 </div>
 
                 <!-- Right content-->
-                <div class="ccol-lg-9 col-md-9 col-sm-9 col-xs-12" >
+                <div class="col-lg-11 col-md-11 col-sm-11 col-xs-12" >
                 <!-- **********************Import Content********************  -->
                 {{ template "content" . }}
                 <!-- **********************Import Content********************  -->
