--- a/templates/listserver.html
+++ b/templates/listserver.html
@@ -1,56 +1,57 @@
 {{ define "content" }}
 
 <div class="panel panel-info" id="cnotent">
-    <div class="panel-heading">
-        <p>ServerList</p>
+    <div >
+
         <ul class="breadcrumb">
             <li>
                 <i class="icon-home"></i>
-                <a href="index.html">Home</a> 
+                <a href="/">Home</a> 
                 <i class="icon-angle-right"></i>
             </li>
             <li>
-                <a href="#">Data Tables</a>
+                <a href="/infra">Infra</a>
                 <i class="icon-angle-right"></i>
             </li>
-            <li><a href="#">Managed Tables</a></li>
+            <li><a href="/infra/listserver">listserver</a></li>
         </ul>
+       
+	</div>
+	<div class="portlet box blue">
+		<div class="portlet-title">
 
-        Functions:
-        <button id="add-row">Add Row</button>
-        <button id="delete-row">Delete Row</button>
-        
-        <button type="button" id="history-redo">Redo</button>
+	        Plese select a function:
+	        <select id="cmd-option"  onchange="selectOnchang(this)" >
+	            <option>Ping</option>
+	            <option>Delete</option>            
+	            <option>Edit</option>
+	            <option>Save</option>
+	        </select>
+	        <button id="cmd-run">Run</button>
+	    </div>
 
-        <select id="cmd-option" class="form-control" onchange="selectOnchang(this)" style="width:100px;">
-            <option>Ping</option>
-            <option>Delete</option>            
-            <option>Edit</option>
-            <option>Save</option>
-        </select>
-        <button id="cmd-run">Run</button>
-    </div>
-    <div>
-        <table class="table table-hover" id="table-servers" data-URL="/infra/getservers">
-            <thead>
-                <tr>
-                    <th width=10px><input type="checkbox" id="checkall" ></th>
-                    <th>hostname</th>
-                    <th>ip</th>
-                    <th>os</th>
-                    <th>platform</th>
-                    <th>Ping</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-          <div>
-            <ul id="table-ser-pag" class="pagination" data-pnum=1 data-psize=5 >
+	    <div>
+	        <table class="table table-hover" id="table-servers" data-URL="/infra/getservers">
+	            <thead>
+	                <tr>
+	                    <th width=10px><input type="checkbox" id="checkall" ></th>
+	                    <th>hostname</th>
+	                    <th>ip</th>
+	                    <th>os</th>
+	                    <th>platform</th>
+	                    <th>Ping</th>
+	                </tr>
+	            </thead>
+	            <tbody>
+	            </tbody>
+	        </table>
+	          <div>
+	            <ul id="table-ser-pag" class="pagination" data-pnum=1 data-psize=5 >
 
-            </ul>
-        </div>
-    </div>
+	            </ul>
+	        </div>
+	    </div>
+	</div>
 </div>
 
 {{end}}
@@ -179,18 +180,20 @@ function listServers(pagenum,pagesize){
 		};
 
     });
+
     function selectOnchang(obj){ 
         //alert(obj.selectedIndex);
         //var action = obj.options[obj.selectedIndex].value;
     }
+
     function Ping(){
     	var items = [];
         $('[name="checkitem"]:checked').each(function(index,elem){
-            items.push($(this).val());}); 
-        window.alert("ping "+items);
-        pingServers(items);        
-        
-    };
+            items.push($(this).val());
+        	pingServers($(this).val());
+        }); 
+    }
+
     function Delete(){
     	var items = [];
         $('[name="checkitem"]:checked').each(function(index,elem){
